fix: delete horizontal scrolling when form is opening

--- a/blog/src/styles/blog.css
+++ b/blog/src/styles/blog.css
@@ -210,7 +210,7 @@
   display: none;
   position: relative;
   left: 0px;
-  width: 99vw;
+  width: 87vw;
   background-color: white;
 }
 
